INTRO:
This documents the changes made to Telaen.

First of all: Telaen would be nowhere without the
effort of many beta testers, other bug-and-patch submitters.

Telaen was originally based on Uebimiau.

LICENSE:
Telaen is released under the GPL.


CHANGELOG:

----------------------------------------------------------------
Telaen:
=======

1.2.0-beta2

[Fix]   HTML Emails now have plain-text component, so that
        SpamAssassin doesn't score them too badly.

[Fix]	Fixed bug on IMAP when using prefix

1.2.0-beta1

[New]	Removed support for versions of PHP < 4.1.0

[New]	Smarty upgraded to 2.6.18.

[New]	Quota handling can now be set per user or per
	domain (or any combination) via the new $quota_limits
	config variable.

[New]   Uses POP3 UIDL for better message tracking. If server
        does not provide a UIDL, we create our own.

[New]	Email filters

[New]	Ajax function: session is mantained alive in the compose page,
	allowing writing long email without lose work.

[New] 	Login page now alerts when you kicked out on a session expire.

[Fix]	Fixed regression with forward/reply of email with embedded
	images. downloads.php causes logout on recipient if uses telaen.

[Fix]   Various performance improvements

[Fix] 	IMAP bug: extra text added on saved sent message cause wrong date/time display

[Fix] 	Hide attachments links only if they are embedded images. Some clients (like pine)
	set Content-Id on all attachment types.

1.1.3

[New]	Added Malay translation

[New]	Updates to some languages

[New] 	Included Outlook theme into package

[Fix]	Solved bug with imap when move or delete multiple message
        only one was moved or deleted.

1.1.3-rc2:

[Fix]	Added check for on CAPA detection, avoid hangs when command 
	is not supported.

[Fix]	Removed target->new on attach download (not open), causes blank
	window remains open on IE.

[New]	de lang up-to-date

1.1.3-rc1:

[Fix]   check_install.php(.txt) now correctly checks memory_limit
	value.
